# Niralysis

./: .gitignore  Events_to_label  LICENSE  Niralysis_openpose.py  README.md  STORM_demo.txt  Storm_validating_file  Tests_for_snirf  calculate_differences.py  calculate_pairwise_distance.py  distance_table.csv  example_head_data.csv  jsonOrganizer.py  new_strom_to_snirf.py  pyproject.toml  pytest tests draft  reqs.txt  setup.py  strom_to_snirf_draft.py  sub_demo.snirf
demo_data/: Changed frames.csv  STORM_demo.txt  blocks_timing_new.xlsx
keypoints/: just_to_check.csv  sub59_session1_just_experimenter.csv  sub59_session1_just_subject.csv  sub59_session2_just_experimenter.csv  sub59_session2_just_subject.csv  sub59_video1_just_experimenter.csv  sub59_video1_just_subject.csv  sub59_video2_just_experimenter.csv  sub59_video2_just_subject.csv
niralysis/: Events_to_label.py  Niralysis.py  calculate_differences.py  calculate_pairwise_distance.py  jsonOrganizer.py  main.py  niralysis.py  requerments.xtx
niralysis/EventsHandler/: EventsHandler.py
niralysis/HbOData/: HbOData.py
niralysis/ISC/: ISC.py
niralysis/OpenPose/: OpenPose.py
niralysis/PredictSRTScoreModel/: PredictSRTScoreModel.py  utils.py
niralysis/SharedReality/: SharedReality.py  consts.py
niralysis/Storm/: Storm.py
niralysis/WaveletCoherence/: WaveletCoherence.py  utils.py
niralysis/calculators/: calculate_pairwise_distance.py
niralysis/utils/: add_annotations.py  consts.py  data_manipulation.py  data_menipulation.py  data_presentation.py
tests/: test_for_snirf.py  test_for_tables.py
(+10 files in other folders)
